--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Franck MAUSSAND</title>
-    <link rel="icon" href="icons/favicon.ico" />
+    <link rel="icon" href="icons/favicon-16x16.png  " />
     <link rel="stylesheet" href="icons/font-awesome/css/all.css" />
     <link rel="stylesheet" href="styles/main.css" />
   </head>
@@ -16,21 +16,24 @@
       </p>
       </br>
       <p>
-        Developer <span class="divider"> | </span> Rust
-        <span class="divider"> | </span> Blockchain
+        Developer <span class="divider"> / </span> Rust <span class="divider"> / </span> Blockchain
       </p>
+      &nbsp;
       <!-- <a href="https://twitter.com/madzadev">
         <i class="icon fab fa-twitter fa-3x"></i>
       </a>&nbsp;&nbsp; -->
       <a href="https://www.linkedin.com/in/franckmaussand/">
         <i class="icon fab fa-linkedin-in fa-3x"></i>
-      </a>&nbsp;&nbsp;
+      </a>
+      &nbsp;&nbsp;
       <a href="https://github.com/Laugharne">
         <i class="icon fab fa-github fa-3x"></i>
-      </a>&nbsp;&nbsp;
+      </a>
+      &nbsp;&nbsp;
       <a href="https://medium.com/@franck.maussand">
         <i class="icon fab fa-medium fa-3x"></i>
-      </a>&nbsp;&nbsp;
+      </a>
+      &nbsp;&nbsp;
       <a href="mailto:franck@maussand.net">
         <i class="icon fas fa-envelope fa-3x"></i>
       </a>
