Add name ; adjustments

--- a/calyptus/index.html
+++ b/calyptus/index.html
@@ -4,23 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Franck MAUSSAND</title>
-    <link rel="icon" href="icons/favicon-16x16.png  " />
-    <link rel="stylesheet" href="icons/font-awesome/css/all.css" />
-    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="icon" href="../icons/favicon-16x16.png  " />
+    <link rel="stylesheet" href="../icons/font-awesome/css/all.css" />
+    <link rel="stylesheet" href="../styles/main.css" />
   </head>
   <body>
     <div class="content-wrapper">
-      </p>
-        <h3>Franck MAUSSAND</h3>
-        </br>
-        <img src="logo.png"
-        widht="400"
-        height="400"
-        >
-      </p>
       </br>
       <p>
-        Developer <span class="divider"> / </span> Rust <span class="divider"> / </span> Blockchain
+      <h2>CALYPTUS</h2>
+      </p>
+      <p>
+        Solana Developer Certifications
+      </p>
+      <p>
+        <div>
+          <a href="https://solscan.io/token/B94zKfQDF1ETFxvJoxW5gy12bPt4122MqfqifFUJWFbT">
+            <img src="2933ffa6-b146-4776-ac3e-58d1a4d674ce.jpeg" widht="150" height="100">
+          </a>
+          </br>
+          <h3>Solana Dev Cert: Create Token (CSC)</h3>
+        </div>
       </p>
       &nbsp;
       <!-- <a href="https://twitter.com/madzadev">
