Hover color ; adjustments

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <h3>Franck MAUSSAND</h3>
         </br>
         <img src="logo.png"
-        widht="400"
-        height="400"
+        widht="380"
+        height="380"
         >
       </p>
       </br>
@@ -26,19 +26,19 @@
       <!-- <a href="https://twitter.com/madzadev">
         <i class="icon fab fa-twitter fa-3x"></i>
       </a>&nbsp;&nbsp;  -->
-      <a href="https://www.linkedin.com/in/franckmaussand/">
+      <a href="https://www.linkedin.com/in/franckmaussand/" title="LinkedIn">
         <i class="icon fab fa-linkedin-in fa-3x"></i>
       </a>
       &nbsp;&nbsp;
-      <a href="https://github.com/Laugharne">
+      <a href="https://github.com/Laugharne" title="GitHub">
         <i class="icon fab fa-github fa-3x"></i>
       </a>
       &nbsp;&nbsp;
-      <a href="https://medium.com/@franck.maussand">
+      <a href="https://medium.com/@franck.maussand" title="Medium">
         <i class="icon fab fa-medium fa-3x"></i>
       </a>
       &nbsp;&nbsp;
-      <a href="mailto:franck@maussand.net">
+      <a href="mailto:franck@maussand.net" title="Email">
         <i class="icon fas fa-envelope fa-3x"></i>
       </a>
     </div>
