--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
       </p>
       </br>
       <p>
-        Developer <span class="divider"> / </span> Rust <span class="divider"> / </span> Blockchain
+        Developer <span class="divider"> | </span> Rust <span class="divider"> | </span> Blockchain
       </p>
       &nbsp;
       <!-- <a href="https://twitter.com/madzadev">
         <i class="icon fab fa-twitter fa-3x"></i>
       </a>&nbsp;&nbsp;  -->
-      <a href="https://www.linkedin.com/in/franckmaussand/" title="LinkedIn">
+      <a href="https://www.linkedin.com/in/franckmaussand/" title="❯ LinkedIn">
         <i class="icon fab fa-linkedin-in fa-3x"></i>
       </a>
       &nbsp;&nbsp;
-      <a href="https://github.com/Laugharne" title="GitHub">
+      <a href="https://github.com/Laugharne" title="❯ GitHub">
         <i class="icon fab fa-github fa-3x"></i>
       </a>
       &nbsp;&nbsp;
-      <a href="https://medium.com/@franck.maussand" title="Medium">
+      <a href="https://medium.com/@franck.maussand" title="❯ Medium">
         <i class="icon fab fa-medium fa-3x"></i>
       </a>
       &nbsp;&nbsp;
-      <a href="mailto:franck@maussand.net" title="Email">
+      <a href="mailto:franck@maussand.net" title="❯ Email">
         <i class="icon fas fa-envelope fa-3x"></i>
       </a>
     </div>
