--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <h3>Franck MAUSSAND</h3>
         </br>
         <img src="logo.png"
-        widht="380"
-        height="380"
+        widht="370"
+        height="370"
         >
       </p>
       </br>
       <p>
-        Developer <span class="divider"> | </span> Rust <span class="divider"> | </span> Blockchain
+        Developer&nbsp;<span class="divider">|</span>&nbsp;Rust&nbsp;<span class="divider">|</span>&nbsp;Blockchain
       </p>
       &nbsp;
       <!-- <a href="https://twitter.com/madzadev">
