--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <h3>Franck MAUSSAND</h3>
         </br>
         <img src="logo.png"
-        widht="370"
-        height="370"
+        widht="365"
+        height="365x  "
         >
       </p>
       </br>
