--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
         <h3>Franck MAUSSAND</h3>
         </br>
         <img src="logo.png"
-        widht="365"
-        height="365x  "
+        widht="300"
+        height="300"
         >
       </p>
       </br>
       <p>
-        Developer&nbsp;<span class="divider">|</span>&nbsp;Rust&nbsp;<span class="divider">|</span>&nbsp;Blockchain
+        <!-- Developer&nbsp;<span class="divider">|</span>&nbsp;Rust&nbsp;<span class="divider">|</span>&nbsp;Blockchain -->
+        Developer<span class="divider">/</span>Rust<span class="divider">/</span>Blockchain
       </p>
       &nbsp;
       <!-- <a href="https://twitter.com/madzadev">
