--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
     <div class="content-wrapper">
       </p>
         <h3>Franck MAUSSAND</h3>
-        </br>
-        <img src="logo.png"
-        widht="260"
-        height="260"
-        >
+      </br>
+      </br>
+      <img src="logo.png" widht="250" height="250">
       </p>
       </br>
       <p>
@@ -24,9 +22,6 @@
         Developer<span class="divider">/</span>Rust<span class="divider">/</span>Blockchain
       </p>
       &nbsp;
-      <!-- <a href="https://twitter.com/madzadev">
-        <i class="icon fab fa-twitter fa-3x"></i>
-      </a>&nbsp;&nbsp;  -->
       <a href="https://www.linkedin.com/in/franckmaussand/" title="❯ LinkedIn">
         <i class="icon fab fa-linkedin-in fa-3x"></i>
       </a>
