--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </br>
       <p>
         <!-- Developer&nbsp;<span class="divider">|</span>&nbsp;Rust&nbsp;<span class="divider">|</span>&nbsp;Blockchain -->
-        Developer<span class="divider">/</span>Rust<span class="divider">/</span>Blockchain
+        Developper<span class="divider">/</span>Rust<span class="divider">/</span>Blockchain
       </p>
       &nbsp;
       <a href="https://www.linkedin.com/in/franckmaussand/" title="❯ LinkedIn">
